--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <H>MARUF HASAN</H>
-      <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, placeat.</h2>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, placeat.</h2>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, placeat.</p>
+        <H>MARUF HASAN</H>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, placeat.</h2>
 
 </body>
 </html>
